@@ -1,4 +1,5 @@
 0.8.0 - currently working on
+- [#5030] Cleanup: Move locallang_db.xml to Resources/Private
 - [#5041] Cleanup: Move the common constants file to Classes/
 - [#5028] Cleanup: Move the icon to Resources/Public
 - [#5020] Fix: Error message: The extension CSS Styled Content is not loaded
